--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -20,6 +21,8 @@
   "devDependencies": {
     "@types/node": "^17.0.23",
     "@types/react": "^18.0.1",
+    "eslint": "8.16.0",
+    "eslint-config-next": "12.1.6",
     "typescript": "^4.6.3"
   }
 }
